<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="cn.com.gnnt.workingdaily.activity.WDAddDailyViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Nav-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <Button
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:id="@+id/nav_colse"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:background="#00000000"
                android:textColor="#fff"
                android:textSize="18dp"
                android:text="@string/add_close_btn_text"/>

            <TextView
                style="@style/nav_title"
                android:id="@+id/nav_title"
                android:text="@string/add_page_title"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:id="@+id/nav_save"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical|right"
                android:background="#00000000"
                android:textColor="#fff"
                android:textSize="18dp"
                android:text="@string/add_save_btn_text"
                android:onClick="@{viewModel.saveBtnCLick}"/>

        </RelativeLayout>

        <!--Content-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#fff">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/add_info_text"
                            android:text="@string/project_tip_text"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                style="@style/add_content_text"
                                android:id="@+id/project"
                                android:hint="@string/project_content_hint"
                                android:text="@{viewModel.projectLiveData}"/>

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_marginRight="2dp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_down"/>
                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <TextView
                            style="@style/add_info_text"
                            android:text="@string/work_type_tip_text"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                style="@style/add_content_text"
                                android:id="@+id/work_type"
                                android:hint="@string/work_type_content_hint"
                                android:text="@{viewModel.workTypeLiveData}"/>

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_marginRight="2dp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_down"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            style="@style/add_info_text"
                            android:text="@string/start_time_tip_text"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                style="@style/add_content_text"
                                android:id="@+id/start_time"
                                android:hint="@string/start_time_content_hint"
                                android:text="@{viewModel.startTimeLiveData}"/>

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_marginRight="2dp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_down"/>

                        </RelativeLayout>

                    </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp">

                            <TextView
                                style="@style/add_info_text"
                                android:text="@string/end_time_tip_text"/>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    style="@style/add_content_text"
                                    android:id="@+id/end_time"
                                    android:hint="@string/end_time_content_hint"
                                    android:text="@{viewModel.endTimeLiveData}"/>

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:layout_marginRight="2dp"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/ic_down"/>

                            </RelativeLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:id="@+id/content"
                    android:gravity="start"
                    android:background="@drawable/bg_soid_white"
                    android:textSize="17dp"
                    android:textColor="#333333"
                    android:hint="@string/add_daily_conetnt_hint"
                    android:text="@={viewModel.workConetntLiveData}"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</layout>