<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="cn.com.gnnt.workingdaily.activity.WDLoginViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/nav_title"
                style="@style/nav_title"
                android:text="@string/login_title"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <!--用户名-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/user_name_img"
                        android:scaleType="fitCenter"
                        android:layout_margin="5dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/user_name"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:hint="@string/user_name_hint"
                        android:textSize="14dp"
                        android:text="@={viewModel.mUserName}"/>

                </LinearLayout>

                <!--密码-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/user_pwd_img"
                        android:scaleType="fitCenter"
                        android:layout_margin="5dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/user_pwd"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:hint="@string/user_pwd_hint"
                        android:textSize="14dp"
                        android:inputType="textPassword"
                        android:text="@={viewModel.mUserPwd}"/>

                </LinearLayout>

                <!--验证码-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/vertify_code_img"
                        android:scaleType="fitCenter"
                        android:layout_margin="5dp"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/user_code"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:hint="@string/vertify_code_hint"
                        android:textSize="14dp"
                        android:text="@={viewModel.mUserCode}"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/code_image"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:scaleType="fitCenter"
                        android:onClick="@{viewModel::refreshCode}"/>

                </LinearLayout>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/save_pwd"
                    android:text="@string/check_box_save_pwd_text"
                    android:textSize="14dp"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorAccent"
                    android:checked="@={viewModel.mCheckBox}"/>

                <!--登录,重置-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:layout_margin="20dp">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/login_btn"
                            android:text="@string/login_btn_text"
                            android:enabled="false"
                            android:onClick="@{viewModel::loginBtnClick}"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:layout_margin="20dp">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/reset_btn"
                            android:text="@string/reset_btn_text"
                            android:onClick="@{viewModel::resetBtnClick}"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</layout>