<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="cn.com.gnnt.workingdaily.fragment.HistoryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff">

        <!--Nav-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/nav_button"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_format_list"/>

            <TextView
                style="@style/nav_title"
                android:id="@+id/nav_title"
                android:text="@string/history_page_title"/>

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/nav_style_select"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/style_select_img"/>

        </RelativeLayout>

        <!--Content-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_date_range"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:id="@+id/start_time"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/start_time_hint"
                        android:textSize="13dp"
                        android:background="@drawable/bg_soid_gray"
                        android:text="@{viewModel.startDate}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="~"
                        android:textSize="13dp"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:id="@+id/end_time"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:hint="@string/end_time_hint"
                        android:textSize="13dp"
                        android:background="@drawable/bg_soid_gray"
                        android:text="@{viewModel.endDate}"/>

                    <Button
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/search_text"
                        android:layout_gravity="center"
                        android:textSize="13dp"
                        android:textColor="#fff"
                        android:background="@drawable/bg_soid_primary"
                        android:onClick="@{viewModel::searchBtnClick}"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".5dp"
                    android:background="#dbdbdb"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/history_content_view"/>

        </LinearLayout>

    </LinearLayout>

</layout>
